--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/htmx.min.js"></script>
+    <link rel="stylesheet" href="/css/main.css">
     <title>{{title}}</title>
 </head>
 <body>
