--- a/src/views/landing.handlebars
+++ b/src/views/landing.handlebars
@@ -1,3 +1,8 @@
 <div>
-    Kimio Link Landing Page 
+    <h1>KimioLink</h1>
+    Landing Page<br/>
+    <a href="/login">Login</a>
+    <br/>
+    <a href="/register">New to KimioLink? Register!</a>
+
 </div>
