feature: Added a new route for login validation

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,13 +1,13 @@
 <div>
     <h1>Sign in to KimioLink</h1>
-    <form>
+    <form action="/validate_user" method="POST">
         <label for="txtUserEmail">Email:</label>
         <input type="email" name="txtUserEmail" id="txtUserEmail">
         <br/>
         <label for="txtUserPassword">Password:</label>
         <input type="password" name="txtUserPassword" id="txtUserPassword">
         <br/>
-        <button type="submit">login!</button>
+        <button type="submit" hx-post="/validate_user">login!</button>
     </form>
     <a href="/">Back to Landing!</a>
 </div>
