--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -7,3 +7,15 @@ html, body {
     color:$dark-gray;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.capture_form_row {
+    display:flex;
+    flex-direction: column;
+}
+
+.zebutton {
+    margin:10px;
+    border-radius: 8px;
+    background-color: aliceblue;
+    cursor: pointer;
+}
