--- a/src/views/partials/add_new_stage_form.handlebars
+++ b/src/views/partials/add_new_stage_form.handlebars
@@ -7,8 +7,8 @@
         <label for="txtDrugPurpose">Drug Purpose</label>
         <input type="text" name="txtDrugPurpose" id="txtDrugPurpose">
     </div>
-    <!-- more fields go here -->
-    <button hx-get="/show_add_stage_form" hx-swap="outerHTML" hx-target="#add-stage-form">Add a new stage to the plan</button>
-        <button hx-get="/show_add_stage_form" hx-swap="outerHTML" hx-target="#add-stage-form" onclick="alert('Bleh')">Add a new stage to the plan</button>
-        <div class="zebutton" hx-get="/show_add_stafe_form" hx-swap="outerHTML" hx-target="#add-stage-form" hx-on="click">Click me!</div>
+    <div class="capture_form_row">
+        <label for="txtDrugDoze">Doze</label>
+        <input type="text" name="txtDrugDoze" id="txtDrugDoze">
+    </div>
 </div>
