Feature: Added a better medication capture form

--- a/src/views/homepage.handlebars
+++ b/src/views/homepage.handlebars
@@ -4,7 +4,7 @@
     <side>
         <a href="/Logout">Logout</a>
         <a href="/search">Search meds</a>
-        <a href="/oncological_plan">Oncological Plan</a>
+        <a href="/oncological_plan">Treatment Plan</a>
         <a href="/patient_profile">Your patient profile</a>
         <a href="/sponsors">Your sponsors</a>
     </side>
