--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,6 +9,15 @@ html, body {
 .capture_form_row {
   display: flex;
   flex-direction: column;
+  margin: 8px;
+}
+
+.chemo_plan_step {
+  display: flex;
+  flex-direction: row;
+  padding: 12;
+  background-color: #52cad3;
+  border-radius: 8px;
 }
 
 .zebutton {
