--- a/src/views/oncological_plan.handlebars
+++ b/src/views/oncological_plan.handlebars
@@ -1,4 +1,11 @@
 <div>
+    <side>
+        <a href="/home">Back to Home</a>
+        <a href="/search">Search meds</a>
+        <a href="/patient_profile">Your patient profile</a>
+        <a href="/sponsors">Your sponsors</a>
+        <a href="/Logout">Logout</a>
+    </side>
     <h1>Oncological Plan</h1>
     <p>Define your plan by adding all stages you need. <br/>
     Each stage you can also define your drug, doze, frequency and even resting period.</p>
@@ -8,5 +15,8 @@
     </div>
     <section>
         <h2>Plan:</h2>
+        <div class="chemo_plan_step">
+            {{ treatmentPlan.medicationName}}
+        </div>
     </section>
 </div>
