--- a/src/views/partials/add_new_stage_form.handlebars
+++ b/src/views/partials/add_new_stage_form.handlebars
@@ -1,14 +1,55 @@
-<div class="">
+<h2>Formulario de Plan de Tratamiento</h2>
+
+<form action="/save-treatment-medication" method="post">
     <div class="capture_form_row">
-        <label for="txtDrugName">Drug Name</label>
-        <input type="text" name="txtDrugName" id="txtDrugName">
+        <label for="txtMedicationName">Nombre comercial del Medicamento:</label>
+        <input type="text" id="txtMedicationName" name="medicationName" placeholder="Tamoxifen">
     </div>
     <div class="capture_form_row">
-        <label for="txtDrugPurpose">Drug Purpose</label>
-        <input type="text" name="txtDrugPurpose" id="txtDrugPurpose">
+        <label for="txtActiveSubstance">Sustancia Activa:</label>
+        <input type="text" id="txtActiveSubstance" name="activeSubstance" placeholder="Oxaliplatin">
     </div>
     <div class="capture_form_row">
-        <label for="txtDrugDoze">Doze</label>
-        <input type="text" name="txtDrugDoze" id="txtDrugDoze">
+        <label for="txtAlternative">Alternativas comerciales (opcional):</label>
+        <input type="text" id="txtAlternative" name="alternative" placeholder="Excemestane">
     </div>
-</div>
+    <div class="capture_form_row">
+        <label for="txtDosage">Dosis:</label>
+        <input type="text" id="txtDosage" name="dosage" placeholder="85">
+        <label for="dpdnDosageUnit">Unidad</label>
+        <select name="dosageUnit" id="dpdnDosageUnit">
+            <option value="mg" selected="true">mg</option>
+            <option value="ml">ml</option>
+        </select>
+    </div>
+    <div class="capture_form_row">
+       <label for="txtGuide">Guia de Administraci&oacute;n</label>
+       <textarea name="guide" id="txtGuide" cols="50" rows="3" placeholder="i.v. en 500ml de D5W durante 2hrs."></textarea>
+    </div>
+    <div class="capture_form_row">
+        <label for="txtRestPeriod">Período de Descanso (días)(Opcional):</label>
+        <input type="number" id="txtRestPeriod" name="restPeriod" placeholder="7">
+    </div>
+    <div class="capture_form_row">
+        <label for="txtDuration">Duraci&oacute;n del Tratamiento:</label>
+        <input type="text" id="txtDuration" name="duration" placeholder="6">
+        <select name="DurationUnit" id="dpdnDurationUnit">
+            <option value="dias">D&iacute;as</option>
+            <option value="semanas" selected="true">Semanas</option>
+            <option value="meses">Meses</option>
+            <option value="cycles">C&iacute;clos</option>       
+        </select>
+    </div>
+    <div class="capture_form_row">
+        <label for="txtDoctorName">Nombre del Médico Tratante:</label>
+        <input type="text" id="txtDoctorName" name="doctorName" placeholder="Dr. Juan Perez">
+    </div> 
+    <div class="capture_form_row">
+        <label for="txtDoctorEmail">Correo Electrónico del Médico Tratante:</label>
+        <input type="text" id="txtDoctorEmail" name="doctorEmail" placeholder="medico@kimiolink.org">
+    </div>
+    <input type="submit" value="Guardar Medicamento">
+</form>
+
+</body>
+</html>
