feature: Enabled Google Material Design 3

--- a/src/views/oncological_plan.handlebars
+++ b/src/views/oncological_plan.handlebars
@@ -11,7 +11,7 @@
     </side>
     <div class="controller_panel">
 <br/>
-        <button hx-get="/show_add_stage_form" hx-swap="outerHTML">Add a new stage to the plan</button>
+        <md-filled-button hx-get="/show_add_stage_form" hx-swap="outerHTML">Add New Plan Stage</md-filled-button>
     </div>
     <section>
         <table>
