--- a/src/views/partials/add_new_stage_form.handlebars
+++ b/src/views/partials/add_new_stage_form.handlebars
@@ -49,6 +49,7 @@
         <input type="text" id="txtDoctorEmail" name="doctorEmail" placeholder="medico@kimiolink.org">
     </div>
     <input type="submit" value="Guardar Medicamento">
+    <md-filled-button hx-get="/show_add_stage_form" hx-swap="outerHTML">Guardad Medicamento</md-filled-button>
 </form>
 
 </body>
