chore: fixed a typo

--- a/src/views/partials/add_new_stage_form.handlebars
+++ b/src/views/partials/add_new_stage_form.handlebars
@@ -48,7 +48,7 @@
         <md-outlined-text-field name="txtDoctorEmail" id="txtDoctorEmail"
             label="Email del médico tratante" placeholder="medico@kimiolink.org"></md-outlined-text-field>
     </div>
-    <md-filled-button hx-get="/show_add_stage_form" hx-swap="outerHTML">Guardad Medicamento</md-filled-button>
+    <md-filled-button hx-get="/show_add_stage_form" hx-swap="outerHTML">Guardar Medicamento</md-filled-button>
 </form>
 
 </body>
