--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -8,6 +8,12 @@ html, body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.capture_form {
+    display:flex;
+    flex-direction: column;
+    width: 400px;
+}
+
 .capture_form_row {
     display:flex;
     flex-direction: column;
