--- a/src/views/patient_profile_admin.handlebars
+++ b/src/views/patient_profile_admin.handlebars
@@ -4,6 +4,10 @@
     </div>
         <h3>Informacion B&aacute;sica</h3>
     <div class="capture_form">
+        <div class="capture_form_row">            
+            <img src="" alt="profile picture" height="150px" width="150px">            
+            <input type="file" name="txtProfilePicture" id="txtProfilePicture">
+        </div>
         <div class="capture_form_row">
             <md-outlined-text-field name="txtName" id="txtName"
             label="Tu Nombre" placeholder="Patricia Cortez"></md-outlined-text-field>
@@ -13,10 +17,10 @@
             <input type="date" name="txtBirthdate" id="txtBirthdate">
         </div>        
         <div class="capture_form_row">
-            <input type="radio" name="radSex" id="radMale">
             <label for="radMale">Hombre</label>
-            <input type="radio" name="radSex" id="radFemale">
+            <input type="radio" name="radSex" id="radMale">
             <label for="radFemale">Mujer</label>
+            <input type="radio" name="radSex" id="radFemale">
         </div>
         <div class="capture_form_row">
             <label for="txtAddress">Domicilio</label> 
@@ -40,36 +44,7 @@
         <div class="capture_form_row">
             <label for="txtDiagnoseDate">Fecha del Diagn&oacute;stico</label>
             <input type="date" name="txtDiagnoseDate" id="txtDiagnoseDate">
-        </div>
-        <div class="capture_form_row">
-            <label for="txtPriorTreatments">Tratamientos Anteriores</label> 
-            <textarea name="txtPriorTreatments" id="txtPriorTreatments" cols="90" rows="4"></textarea>
-        </div>
-    </div>
-    <div class="capture_form">
-        <h3>Tratamiento Actual</h3>
-        <p>Nombre del Medicamento(s): Los medicamentos espec&iacute;ficos que el paciente est&aacute; buscando.</p>
-        <div class="capture_form_row">
-            <md-outlined-text-field id="txtDrugName" name="txtDrugName" 
-            label="Nombre del medicamento" placeholder="Aspirina"></md-outlined-text-field>
-        </div>
-        <div class="capture_form_row">
-            <md-outlined-text-field id="txtDose" name="txtDose" 
-            label="Dosis" placeholder="5mg "></md-outlined-text-field>            
-        </div>
-        <div class="capture_form_row">
-            <label for="dropIntakeFrequency">Frecuencia de administraci&oacute;n</label>
-            <select name="dropIntakeFrequency" id="dropIntakeFrequency">
-                <option value="daily">Diaria</option>
-                <option value="weekly">Semanal</option>
-                <option value="Monthly">Mensual</option>
-                <option value="other">Otro</option>
-            </select>
-        </div>
-        <div class="capture_form_row">
-            <label for="txtDuration">Duraci&oacute;n (en numero de frecuencias. ej: 3 semanas)</label>
-            <input type="number" name="txtDuration" id="txtDuration">
-        </div>
+        </div>       
         <div class="capture_form_row">
             <md-outlined-text-field name="txtDoctorName" id="txtDoctorName" 
             label="Nombre del Médico Tratante" placeholder="Dr. Manuel Rodriguez"></md-outlined-text-field>
