chore: separated the usage of top bar and side bar into components

--- a/src/views/layouts/home.handlebars
+++ b/src/views/layouts/home.handlebars
@@ -12,6 +12,10 @@
     <title>{{title}}</title>
 </head>
 <body>
-    {{{body}}}
+    <div class="home_container">
+        {{> top_bar}}
+        {{> side_bar}}
+        {{{body}}}
+    </div>
 </body>
 </html>
