--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,6 +6,39 @@ html, body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.home_container {
+  display: grid;
+  grid-template-areas: "header header header" "sidebar content content";
+  grid-template-columns: 200px auto auto;
+  grid-template-rows: 50px auto;
+  height: 100vh;
+  width: 100%;
+}
+
+.header {
+  grid-area: header;
+  display: flex;
+  flex-direction: row;
+  background-color: #89CFF0;
+  padding: 12px;
+}
+
+side {
+  grid-area: sidebar;
+  display: flex;
+  padding: 12px;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100vh;
+  border-right: 1px solid #F5F5F5;
+  background-color: #f5f7fa;
+}
+
+.main {
+  grid-area: content;
+  padding: 12px;
+}
+
 .capture_form {
   display: flex;
   flex-direction: column;
