--- a/src/views/homepage.handlebars
+++ b/src/views/homepage.handlebars
@@ -1,11 +1,4 @@
-<div>
+<div class="main">
     <h1>Patient's Home</h1>
     <h2>Welcome patient id:{{patientId}}</h2>
-    <side>
-        <a href="/Logout">Logout</a>
-        <a href="/search">Search meds</a>
-        <a href="/oncological_plan">Treatment Plan</a>
-        <a href="/patient_profile">Your patient profile</a>
-        <a href="/sponsors">Your sponsors</a>
-    </side>
 </div>
