feature: added dynamic sidebar menu options

--- a/src/views/oncological_plan.handlebars
+++ b/src/views/oncological_plan.handlebars
@@ -1,16 +1,10 @@
-<div>
+<div class="main">
     <h1>Oncological Plan</h1>
     <p>Define your plan by adding all stages you need. <br/>
     Each stage you can also define your drug, doze, frequency and even resting period.</p>
-    <side>
-        <a href="/home">Back to Home</a>
-        <a href="/search">Search meds</a>
-        <a href="/patient_profile">Your patient profile</a>
-        <a href="/sponsors">Your sponsors</a>
-        <a href="/Logout">Logout</a>
-    </side>
+   
     <div class="controller_panel">
-<br/>
+    <br/>
         <md-filled-button hx-get="/show_add_stage_form" hx-swap="outerHTML">Add New Plan Stage</md-filled-button>
     </div>
     <section>
