--- a/src/views/partials/side_bar.handlebars
+++ b/src/views/partials/side_bar.handlebars
@@ -1,7 +1,5 @@
 <side>
-    <a href="/Logout">Logout</a>
-    <a href="/search">Search meds</a>
-    <a href="/oncological_plan">Treatment Plan</a>
-    <a href="/patient_profile">Your patient profile</a>
-    <a href="/sponsors">Your sponsors</a>
+    {{#each sidebar }}    
+        <a href="{{url}}">{{title}}</a>
+    {{/each }}
 </side>
