feature: added profile pic to side bar

--- a/src/views/partials/side_bar.handlebars
+++ b/src/views/partials/side_bar.handlebars
@@ -1,4 +1,5 @@
 <side>
+    <img src="" alt="profile picture" sizes="">
     {{#each sidebar }}    
         <a href="{{url}}">{{title}}</a>
     {{/each }}
