--- a/src/views/partials/top_bar.handlebars
+++ b/src/views/partials/top_bar.handlebars
@@ -1,1 +1,10 @@
-<div class="header"><div class="logo">Kimio Link</div></div>
+<!-- top_bar.handlebars -->
+<header class="bg-teal-light shadow p-4 flex items-center justify-between">
+    <div class="text-2xl font-semibold">KimioLink</div>
+    <nav>
+        <a href="/" class="text-gray-700 hover:text-teal-dark mx-2">Help</a>
+        <a href="/about" class="text-gray-700 hover:text-teal-dark mx-2">About KimioLink</a>
+        <a href="/contact" class="text-gray-700 hover:text-teal-dark mx-2">Contact Us</a>
+        <a href="/donate" class="text-gray-700 hover:text-teal-dark mx-2">Donate</a>
+    </nav>
+</header>
