--- a/src/views/layouts/home.handlebars
+++ b/src/views/layouts/home.handlebars
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/htmx.min.js"></script>
-    <link rel="stylesheet" href="/css/home.css">
-    <script type="module" src="/css/bundled-material.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/tailwind.css">
     <title>{{title}}</title>
 </head>
-<body>
-    <div class="home_container">
+<body class="bg-gray-100 text-gray-900">
+    <div class="flex flex-col h-screen">
         {{> top_bar}}
-        {{> side_bar}}
-        {{{body}}}
+        <div class="flex flex-1">
+            {{> side_bar}}
+            <main class="flex-1 p-6 bg-white shadow-md rounded-lg max-w-4xl mx-auto mt-10">
+                {{{body}}}
+            </main>
+        </div>
     </div>
 </body>
 </html>
