--- a/src/views/partials/add_new_stage_form.handlebars
+++ b/src/views/partials/add_new_stage_form.handlebars
@@ -1,4 +1,4 @@
-<h2>Formulario de Plan de Tratamiento</h2>
+<h2>Plan de Tratamiento</h2>
 
 <form action="/save-treatment-medication" method="post">
     <div class="capture_form_row">
