--- a/src/views/layouts/home.handlebars
+++ b/src/views/layouts/home.handlebars
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/htmx.min.js"></script>
+    <script src="/js/utils.js"></script>
     <link rel="stylesheet" href="/css/tailwind.css">
     <title>{{title}}</title>
 </head>
