--- a/src/views/oncological_plan.handlebars
+++ b/src/views/oncological_plan.handlebars
@@ -7,7 +7,7 @@
     </p>
    
     <div class="controller_panel mt-4">
-        <!--button hx-get="/show_add_stage_form" hx-swap="outerHTML" class="mt-2 bg-teal text-white px-4 py-2 rounded">Add a new stage to the plan</button-->
+        <div id="msgHandler"></div>
         <button id="btnAddPlanStage" class="mt-2 bg-teal text-white px-4 py-2 rounded">Add a new stage to the plan</button>
         {{> dialogbox}}
     </div>
