--- a/src/views/oncological_plan.handlebars
+++ b/src/views/oncological_plan.handlebars
@@ -7,9 +7,9 @@
     </p>
    
     <div class="controller_panel mt-4">
-        <div id="msgHandler"></div>
         <button id="btnAddPlanStage" class="mt-2 bg-teal text-white px-4 py-2 rounded">Add a new stage to the plan</button>
         {{> dialogbox}}
+        {{> toast_card}}
     </div>
     <section>
         <table id="tblTreatment">
