--- a/src/views/partials/dialogbox.handlebars
+++ b/src/views/partials/dialogbox.handlebars
@@ -1,5 +1,5 @@
 <dialog id="dialog-confirm" class="p-6 rounded-md shadow-lg bg-white w-1/3 backdrop:bg-black backdrop:bg-opacity-50 backdrop:backdrop-blur-sm">
-    <form method="post" action="/add-stage" hx-post="/add-stage" hx-target="#msgHandler" hx-swap="innerHTML" class="flex flex-col space-y-4">
+    <form method="post" action="/add-stage" hx-post="/add-stage" hx-target="#toastMessageHandler" hx-swap="outerHTML" class="flex flex-col space-y-4">
         <h2 class="text-xl font-semibold">Add a New Stage</h2>
         <input type="text" name="stageName" placeholder="Stage Name" class="p-2 border rounded" required>
         <input type="text" name="drug" placeholder="Drug" class="p-2 border rounded" required>
