style: adjusted the teal colors

--- a/src/views/oncological_plan.handlebars
+++ b/src/views/oncological_plan.handlebars
@@ -2,7 +2,7 @@
     <h1 class="text-3xl text-blue-dark">Oncological Plan</h1>
     <p class="text-gray">Define your plan by adding all stages you need. <br/>
     Each stage you can also define your drug, doze, frequency and even resting period.
-    <a href="https://www.cancer.org/es/cancer/como-sobrellevar-el-cancer/tomar-decisiones-sobre-el-tratamiento/planifica-programa-tratamiento.html" class=" text-blue-dark">Aqui</a>
+    <a href="https://www.cancer.org/es/cancer/como-sobrellevar-el-cancer/tomar-decisiones-sobre-el-tratamiento/planifica-programa-tratamiento.html" class=" text-coral">Aqui</a>
     hay mas información sobre como se planifica un tratamiendo contra el cancer.
     </p>
    
