--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -479,9 +479,6 @@ video {
 .table {
   display: table;
 }
-.hidden {
-  display: none;
-}
 .h-16 {
   height: 4rem;
 }
@@ -579,17 +576,17 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(95 158 160 / var(--tw-bg-opacity));
 }
+.bg-teal-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
+}
 .bg-teal-light {
   --tw-bg-opacity: 1;
-  background-color: rgb(137 207 240 / var(--tw-bg-opacity));
+  background-color: rgb(207 225 226 / var(--tw-bg-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(250 250 250 / var(--tw-bg-opacity));
-}
-.bg-teal-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
 }
 .p-2 {
   padding: 0.5rem;
@@ -670,6 +667,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(250 250 250 / var(--tw-text-opacity));
 }
+.text-coral {
+  --tw-text-opacity: 1;
+  color: rgb(255 111 97 / var(--tw-text-opacity));
+}
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -685,24 +686,12 @@ video {
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
 .backdrop\:bg-black::backdrop {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .backdrop\:bg-opacity-50::backdrop {
   --tw-bg-opacity: 0.5;
-}
-.backdrop\:backdrop-blur::backdrop {
-  --tw-backdrop-blur: blur(8px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 .backdrop\:backdrop-blur-sm::backdrop {
   --tw-backdrop-blur: blur(4px);
@@ -711,11 +700,11 @@ video {
 }
 .hover\:bg-teal-light:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(137 207 240 / var(--tw-bg-opacity));
+  background-color: rgb(207 225 226 / var(--tw-bg-opacity));
 }
 .hover\:text-teal-dark:hover {
   --tw-text-opacity: 1;
-  color: rgb(51 51 51 / var(--tw-text-opacity));
+  color: rgb(57 94 96 / var(--tw-text-opacity));
 }
 .hover\:underline:hover {
   text-decoration-line: underline;
