--- a/src/views/partials/side_bar.handlebars
+++ b/src/views/partials/side_bar.handlebars
@@ -6,7 +6,7 @@
        sizes="">
        <div>
             <h2 class="text-lg font-semibold text-gray-900">Camila Sodi</h2>
-            <p class="text-sm text-gray-600">Lorem ipsum donnor lorem ipsun donnor deimos</p>
+            <p class="text-sm text-gray-600">Lorem ipsum donnor lorem</p>
         </div>
     </div>
     <nav class="space-y-2">
